# computer

./: .gitignore  COMMANDS.md  COMMANDS.md.save  COMMANDS_NEW.md  CU ROM.data  CU_ROM.data  CU_ROM_NEW.data  Cargo.toml  README.md  log  logisim.circ  logisim74.circ
boulder/: .gitignore  Cargo.toml  NOTES.md  README.md  SPECIFICATION.md  a.data  log
boulder/_lang/: SPECIFICATION.md  func.bo
boulder/_std/: lib.bo  shell.bo
boulder/bmi/: Cargo.toml
boulder/bmi/src/: binop.rs
boulder/boulder/: Cargo.toml  a.data  sum_types.bo  traits.bo
boulder/boulder/global_ctx/: Cargo.toml
boulder/boulder/global_ctx/src/: lib.rs
boulder/boulder/src/: lib.rs  main.rs
boulder/boulder/tests/: compile_fail.rs  compile_run.rs  fail.rs  run.rs  test.rs
boulder/boulder/tests/compile_fail/attr/: test_invalid.bo
boulder/boulder/tests/compile_fail/binop/: bitor_ty.bo  eq_output_int.bo  let_cmp.bo
boulder/boulder/tests/compile_fail/function/: add_types.bo  fn_arg_repeat.bo  unresolvable_int.bo
boulder/boulder/tests/compile_fail/hir/: add_types.bo  assignment.ty.bo  consuming_semi.bo  fn_simple.bo  missing_semi.bo  overflowing_lit.bo  uninitialized.bo  unknown_variable.bo
boulder/boulder/tests/compile_fail/loop/: empty.bo  while_ty.bo
boulder/boulder/tests/compile_fail/match/: expr_ty.bo
boulder/boulder/tests/compile_fail/module/: try_from_outer.bo
boulder/boulder/tests/compile_run/: core_fn.bo
boulder/boulder/tests/planned/: expand_assign.bo  iff.bo  match.bo  match_bool.bo  match_match.bo  optimize.bo  sum_types.bo
boulder/boulder_core/: Cargo.toml
boulder/boulder_core/src/: lib.rs
boulder/cli/: Cargo.toml  a.data
boulder/cli/src/: main.rs
boulder/diagnostics/: Cargo.toml
boulder/diagnostics/src/: lib.rs
boulder/examples/: sum_types.bo  traits.bo
boulder/global_ctx/: Cargo.toml
boulder/global_ctx/src/: lib.rs
boulder/hir/: Cargo.toml
boulder/hir/src/: attr.rs  expression.rs  func.rs  function.rs  lib.rs  mir_ctx.rs  module.rs  to_mir.rs  traits.rs  ty.rs
boulder/hir/src/expr/: ident.rs  into_mir.rs  mod.rs  to_mir.rs  type_ck.rs
boulder/hir/src/func/: index.rs  mod.rs
boulder/hir/src/ty/: mod.rs  solver.rs
boulder/lir/: Cargo.toml
boulder/lir/src/: display.rs  lib.rs  reachability.rs  traits.rs  validate.rs
boulder/lir/src/optimize/: coloring.rs  const_prop.rs  dead_writes.rs  inline.rs  match_branches.rs  mod.rs  simplify_comparision_branch.rs  trace_moves.rs
boulder/lir/src/traits/: mod.rs  reads.rs  writes.rs
boulder/lir2asm/: Cargo.toml  README.md
boulder/lir2asm/src/: ctx.rs  lib.rs  optimize.rs  util.rs
boulder/lir_interpreter/: Cargo.toml
boulder/lir_interpreter/src/: lib.rs
boulder/meta/: Cargo.toml
boulder/meta/src/: lib.rs
boulder/mir/: Cargo.toml
boulder/mir/src/: binop.rs  ctx.rs  display.rs  index.rs  lib.rs  meta.rs  to_asm.rs  validate.rs
boulder/mir/src/optimize/: mod.rs
boulder/mir/src/traits/: mod.rs  update.rs
boulder/mir/src/transform/: const_prop.rs  enums.rs  flatten_structs.rs  mod.rs  optimize.rs  sum_types.rs  to_bytes.rs
boulder/mir2lir/: Cargo.toml
boulder/mir2lir/src/: lib.rs
boulder/mir_interpreter/: Cargo.toml
boulder/mir_interpreter/src/: binop.rs  lib.rs
boulder/nlir/: Cargo.toml
boulder/nlir/src/: lib.rs
boulder/parse/: Cargo.toml
boulder/parse/src/: error.rs  lib.rs  tokenize.rs
boulder/shared_id/: Cargo.toml
boulder/shared_id/src/: lib.rs
boulder/solver/: Cargo.toml
boulder/solver/src/: lib.rs
boulder/src/: lib.rs  main.rs
boulder/tests/: fail.rs  run.rs
boulder/tests/compile/binop/: add.bo  bitor.bo  eq.bo  miscompilation.co  shl.bo
boulder/tests/compile/examples/: primes.bo
boulder/tests/compile/function/: core_fn.bo  delayed_init.bo  negate.bo  recurse.bo
boulder/tests/compile/inline/: simple.bo
boulder/tests/compile/intrinsics/: u16_to_bytes_simple.bo
boulder/tests/compile/loop/: default_type.bo  positions.bo  simple.bo
boulder/tests/compile/modules/: shadow_fn.bo
boulder/tests/compile/type/: create_unit.bo  infer.bo  type_ascription.bo
boulder/tests/compile_fail/attr/: lang_item.bo  on_import.bo  test_attr.bo
boulder/tests/compile_fail/binop/: bitand_ret_true.bo
boulder/tests/compile_fail/match/: expr_ty.bo  if_no_else.bo
boulder/tests/compile_fail/module/: import_fn_clash.bo  import_ty_clash.bo  import_wrong_mod.bo  intern_with_path.bo
boulder/tests/compile_fail/scope/: break_fn.bo  scopeless_break.bo
boulder/tests/compile_run/binop/: add.bo  bitand.bo  div.bo  gt.bo  lt.bo  lte.bo  mul.bo  rem.bo  sub.bo
boulder/tests/compile_run/examples/: fibonacci.bo  primes.bo
boulder/tests/compile_run/function/: function_call.bo  logic_ops.bo  shadow.bo  shadow_unit.bo
boulder/tests/compile_run/inline/: matches.bo  temp.bo
boulder/tests/compile_run/intrinsics/: u16_to_bytes.bo
boulder/tests/compile_run/loop/: while_simple.bo
boulder/tests/compile_run/modules/: extern.bo  simple.bo  use_item.bo  used.bo
boulder/tests/compile_run/scope/: break_var.bo  temporaries.bo
boulder/tests/compile_run/union/: different_size.bo
boulder/tests/error/function/: missing_semi.bo
boulder/tests/error/match/: semicolon.bo  underscore_ty.bo
boulder/tests/error/module/: import_unknown_item.bo  repeat_path.bo  unknown_file.bo
boulder/tests/error/parse/: assignment.bo
boulder/tests/error/scope/: scopeless_break.bo  unknown_label.bo  var_after_break.ra
boulder/tests/error/type/: sum_member.bo  sum_self_ref.bo
boulder/tests/planned/: coerce_default.bo
mirco/: Cargo.toml  (+1 more)
rock/: .gitignore  Cargo.toml  README.md
rock/src/: commands.rs  lib.rs  main.rs  token.rs
rock/tests/: accutoggle.ra  accutoggle.ra~  all.ra  comments.ra  jmp.ra  loading.opc  loading.ra  multiply.ra  readme_ex.ra  simple.ra  stack.ra  test.rs  unnamed.ra
rock/tests/compile_fail/: err.ra  if_if.ra  invalid_memory_access.ra  repeated_section.ra  swap.ra
rock/tests/compile_run/: accutoggle.ra  all.ra  comments.ra  fibonacci.ra  fully_qualified_path.ra  loading.ra  multiply.ra  multiply2.ra  readme_ex.ra  simple.ra  stack.ra  swap.ra  underscore_ident.ra
(+134 files in other folders)
