[workspace]

members = [
    "rock",
    "boulder/global_ctx",
    "boulder/solver",
    "boulder",
    "boulder/mir_interpreter",
    "boulder/diagnostics",
    "boulder/shared_id",
    "boulder/parse",
    "boulder/hir",
    "boulder/mir",
    "boulder/mir2lir",
    "boulder/lir",
    "remu",
    "mirco",
]