[workspace]

members = [
    "rock",
    "boulder/global_ctx",
    "boulder/solver",
    "boulder",
    "boulder/diagnostics",
    "boulder/shared_id",
    "boulder/parse",
    "boulder/hir",
    "boulder/mir",
    "boulder/mir_interpreter",
    "boulder/mir2lir",
    "boulder/lir",
    "boulder/lir_interpreter",
    "boulder/lir2asm",
    "remu",
    "mirco",
]

[profile.test]
opt-level = 2
