[package]
name = "rock"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
thread_profiler = { version = "0.3.0", optional = true }

[features]
profiler = ["thread_profiler"]

[dev-dependencies]
walkdir = "2.2.9"
serial_test = "0.2"
serial_test_derive = "0.2"