[package]
name = "bmi"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tindex = { git = "https://github.com/lcnr/tindex.git" }

shared_id = { path = "../shared_id" }
mir = { path = "../mir" }
