[package]
name = "boulder"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
diagnostics = { path = "../diagnostics" }
parse = { path = "../parse"}
mir = { path = "../mir" }

[dev-dependencies]
walkdir = "2.2.9"
serial_test = "0.2"
serial_test_derive = "0.2"

