[package]
name = "boulder"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
diagnostics = { path = "../diagnostics" }
parse = { path = "../parse"}
mir = { path = "../mir" }
mir_interpreter = { path = "../mir_interpreter" }
rock = { path = "../../rock" }

[dev-dependencies]
shared_id = { path = "../shared_id"}
walkdir = "2.2.9"


