[package]
name = "diagnostics"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
lazy_static = "1.2"
thread_profiler = { version = "0.3.0", optional = true }

[features]
profiler = ["thread_profiler"]

[lib]
test = false
doctest = false
bench = false
