[package]
name = "hir"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
tindex = { git = "https://github.com/lcnr/tindex.git" }
shared_id = { path = "../shared_id"}
solver = { path = "../solver" }
diagnostics = { path = "../diagnostics" }
mir = { path = "../mir" }

[lib]
test = false
doctest = false
bench = false