[package]
name = "lir"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_profiler = { version = "0.3.0", optional = true }
tindex = { git = "https://github.com/lcnr/tindex.git" }
graphc = { git = "https://github.com/lcnr/graphc.git" }
shared_id = { path = "../shared_id" }

[features]
profiler = ["thread_profiler", "shared_id/profiler"]

[lib]
test = false
doctest = false
bench = false