[package]
name = "lir2asm"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_id = { path = "../shared_id"}
lir = { path = "../lir" }
rock = { path = "../../rock" }
tindex = { git = "https://github.com/lcnr/tindex.git" }