[package]
name = "lir2asm"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_profiler = { version = "0.3.0", optional = true }

arrayvec = "0.5"

shared_id = { path = "../shared_id"}
lir = { path = "../lir" }
tindex = { git = "https://github.com/lcnr/tindex.git" }

[features]
profiler = ["thread_profiler", "shared_id/profiler", "lir/profiler"]

[lib]
test = false
doctest = false
bench = false
