[package]
name = "lir_interpreter"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tindex = { git = "https://github.com/lcnr/tindex.git" }
lir = { path = "../lir" }
shared_id = { path = "../shared_id" }

thread_profiler = { version = "0.3.0", optional = true }

[features]
profiler = ["thread_profiler", "shared_id/profiler", "lir/profiler"]