[package]
name = "mir2lir"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
thread_profiler = { version = "0.3.0", optional = true }
tindex = { git = "https://github.com/lcnr/tindex.git" }
shared_id = { path = "../shared_id" }

mir = { path = "../mir" }
lir = { path = "../lir" }

[features]
profiler = ["thread_profiler"]

[lib]
test = false
doctest = false
bench = false