[package]
name = "mir_interpreter"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tindex = { git = "https://github.com/lcnr/tindex.git" }

shared_id = { path = "../shared_id" }
mir = { path = "../mir" }

thread_profiler = { version = "0.3.0", optional = true }

[features]
profiler = ["thread_profiler", "shared_id/profiler", "mir/profiler"]

[lib]
test = false
doctest = false
bench = false
