[package]
name = "parse"
version = "0.1.0"
authors = ["lcnr/Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

[dependencies]
tindex = { git = "https://github.com/lcnr/tindex.git" }

global_ctx = { path = "../global_ctx" }
diagnostics = { path =  "../diagnostics" }
hir = { path = "../hir" }

thread_profiler = { version = "0.3.0", optional = true }

[features]
profiler = ["thread_profiler", "diagnostics/profiler", "hir/profiler"]

[lib]
test = false
doctest = false
bench = false